test/good/basic/assg01.px

Int a
Rat b
a = b = 1
print a, b.fraction
