test/bad/generators/type01.px

a: Int...
b: Float... = a
